--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,4 +4,6 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8080:8080" # HTTP
+      - "8000:8000" # HTTP
+      - "8001:8001" # ws
+      - "8082:8082" # grpc
