--- a/Dockerfile.job
+++ b/Dockerfile.job
@@ -4,4 +4,4 @@ WORKDIR /app
 
 ARG QOVERY_PROJECT_ID
 
-CMD [ "/bin/sh", "-c", "echo '{ \"MY_JOB_VAR\": { \"sensitive\": false, \"value\": \"psytrance!!!\" } }' > /qovery-output/qovery-output.json"]
+CMD [ "/bin/sh", "-c", "echo '{ \"MY_JOB_VAR\": { \"sensitive\": false, \"value\": \"metal!!!\" } }' > /qovery-output/qovery-output.json"]
