--- a/simple_helm/Chart.yaml
+++ b/simple_helm/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: simple_helm
+name: simple-helm
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
