--- a/simple_helm/templates/service.yaml
+++ b/simple_helm/templates/service.yaml
@@ -2,6 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "simple_helm.fullname" . }}
+  {{- with .Values.serviceAnnotations }}
+  annotations:
+      {{- toYaml . | nindent 4 }}
+  {{- end }}
   labels:
     {{- include "simple_helm.labels" . | nindent 4 }}
 spec:
