--- a/simple_helm/Chart.yaml
+++ b/simple_helm/Chart.yaml
@@ -3,7 +3,7 @@ name: simple-helm
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
-#
+# blabla
 # Application charts are a collection of templates that can be packaged into versioned archives
 # to be deployed.
 #
